# IA-Hardware-Composer

./: .clang-format  .clang-format-ignore  .gitignore  .gitlab-ci-checkcommit.sh  .gitlab-ci.yml  .travis.yml  Android.bp  Android.common.mk  Android.mk  Android.static.mk  CONTRIBUTING  CONTRIBUTING.md  Doxyfile  Makefile.am  Makefile.sources  OWNERS  README.md  autofd.h  autogen.sh  autogl.h  autolock.cpp  autolock.h  compositor.cpp  compositor.h  configure.ac  drm_hwc.h  drm_hwcomposer.h  drmcomposition.cpp  drmcomposition.h  drmcompositor.cpp  drmcompositor.h  drmcompositorworker.cpp  drmcompositorworker.h  drmconnector.cpp  drmconnector.h  drmcrtc.cpp  drmcrtc.h  drmdevice.cpp  drmdevice.h  drmdisplaycomposition.cpp  (+68 more)
common/: Android.mk  Makefile.am  Makefile.sources
common/compositor/: compositionregion.h  compositor.cpp  compositor.h  compositordefs.h  compositorthread.cpp  compositorthread.h  factory.cpp  factory.h  nativegpuresource.h  nativesurface.cpp  nativesurface.h  renderer.h  renderstate.cpp  renderstate.h  scopedrendererstate.cpp  scopedrendererstate.h
common/compositor/dc/: dcrenderer.cpp  dcrenderer.h  dcshim.cpp  dcshim.h  dcsurface.cpp  dcsurface.h  dummycomp.h  egloffscreencontext.cpp  glrenderer.cpp  glrenderer.h  glsurface.cpp  glsurface.h  nativedcresource.cpp  nativedcresource.h  nativeglresource.cpp  nativeglresource.h
common/compositor/gl/: egloffscreencontext.cpp  egloffscreencontext.h  glprogram.cpp  glprogram.h  glrenderer.cpp  glrenderer.h  glsurface.cpp  glsurface.h  nativeglresource.cpp  nativeglresource.h  shim.cpp  shim.h
common/compositor/va/: varenderer.cpp  varenderer.h  vasurface.cpp  vasurface.h  vautils.cpp  vautils.h
common/compositor/vk/: nativevkresource.cpp  nativevkresource.h  vkcomp.frag  vkcomp.frag.h  vkcomp.vert  vkcomp.vert.h  vkcontext.cpp  vkcontext.h  vkprogram.cpp  vkprogram.h  vkrenderer.cpp  vkrenderer.h  vkshim.cpp  vkshim.h  vksurface.cpp  vksurface.h
common/core/: display.cpp  framebuffermanager.cpp  framebuffermanager.h  gpudevice.cpp  headless.cpp  headless.h  hwclayer.cpp  hwclayerbuffermanager.cpp  hwclayerbuffermanager.h  hwclock.cpp  hwclock.h  internaldisplay.cpp  internaldisplay.h  logicaldisplay.cpp  logicaldisplay.h  logicaldisplaymanager.cpp  logicaldisplaymanager.h  mosaicdisplay.cpp  mosaicdisplay.h  mosiacdisplay.cpp  mosiacdisplay.h  nativesync.cpp  nativesync.h  nesteddisplay.cpp  nesteddisplay.h  overlaybuffer.cpp  overlaybuffer.h  overlaybuffermanager.cpp  overlaybuffermanager.h  overlaylayer.cpp  overlaylayer.h  resourcemanager.cpp  resourcemanager.h  virtualdisplay.cpp  virtualdisplay.h
common/display/: display.cpp  display.h  displayplane.cpp  displayplane.h  displayplanemanager.cpp  displayplanemanager.h  displayplanestate.cpp  displayplanestate.h  displayqueue.cpp  displayqueue.h  headless.cpp  headless.h  hyperdmadisplay.h  kmsfencehandler.cpp  kmsfencehandler.h  overlaybuffer.cpp  overlaybuffer.h  pageflipeventhandler.cpp  pageflipeventhandler.h  pageflipstate.cpp  pageflipstate.h  vblankeventhandler.cpp  vblankeventhandler.h  virtualdisplay.cpp  virtualdisplay.h  virtualpanoramadisplay.cpp  virtualpanoramadisplay.h
common/utils/: LogEntry.h  LogView.cpp  commondrmutils.h  disjoint_layers.cpp  disjoint_layers.h  drmscopedtypes.cpp  drmscopedtypes.h  drmutils.h  fdhandler.cpp  fdhandler.h  hwcevent.cpp  hwcevent.h  hwcthread.cpp  hwcthread.h  hwctrace.h  hwcutils.cpp  hwcutils.h  logentry.h  logview.cpp  separate_rects.cpp
common/utils/val/: AbstractCompositionChecker.h  AbstractLog.h  abstractcompositionchecker.h  abstractlog.h
tests/: Android.bp  Android.mk  Makefile.am  queue_worker_test.cpp  separate_rects_test.cpp  worker_test.cpp
tests/apps/: jsonlayerstest.cpp  kmscube.cpp  linux_frontend_test.cpp  linux_hdr_image_test.cpp  panorama_disable.sh  panorama_enable.sh
tests/autotests/: colorcorrection_autotest.cpp
tests/commitswitch/: 0001-Build-libminigbm.so-for-compiling-kmscube.patch.txt  Android.mk  README.md  common.c  common.h  cube-smooth.c  cube-tex.c  cube-video.c  drm-atomic.c  drm-common.c  drm-common.h  drm-legacy.c  esTransform.c  esUtil.h  frame-512x512-NV12.c  frame-512x512-RGBA.c  gst-decoder.c  kmscube.c
tests/commitswitch/wrap/: Android.mk  kmswrapper.cpp  kmswrapper.h
tests/common/: cclayerrenderer.cpp  cclayerrenderer.h  esTransform.cpp  glcubelayerrenderer.cpp  glcubelayerrenderer.h  gllayerrenderer.cpp  gllayerrenderer.h  igt.cpp  igt.h  imagelayerrenderer.cpp  imagelayerrenderer.h  jsonhandlers.cpp  jsonhandlers.h  layerfromjson.cpp  layerfromjson.h  layerrenderer.cpp  layerrenderer.h  videolayerrenderer.cpp  videolayerrenderer.h
tests/googletests/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
tests/googletests/tests/: .sample1.cc.swp  sample1.cc  sample1_unittest.cc
tests/hwc-val/: README
tests/hwc-val/regex-re2_temp/: Android.mk  (+3 more)
tests/jsonconfigs/: colorcorrection.json  example.json  halfmt1layer.json  kmscube1layer.json  kmscube1layer_canvascolor.json  kmscube1layer_rot90.json  kmscube1layer_rot90flipx.json  kmscube1layer_rot90flipy.json  kmscubetexture1layer.json  multiplelayers.json  multiplelayers_idle.json  multiplelayersnovideo.json  multiplelayersnovideo_powermode.json  powermode.json  video1layer_bgra.json  video1layer_nv12.json  videoyuyv1layer.json
tests/kmscube/: esUtil.h  kmscube.cpp
tools/colorformatter/: Makefile.am  README.md  autogen.sh  colorformatter.cpp  configure.ac
wsi/: Android.mk  Makefile.am  Makefile.sources  displaymanager.h  displayplane.h  displayplanehandler.h  logicaldisplay.cpp  logicaldisplay.h  logicaldisplaymanager.cpp  logicaldisplaymanager.h  overlaybuffer.h  physicaldisplay.cpp  physicaldisplay.h  pixelbuffer.cpp  pixelbuffer.h  wsi_utils.h
wsi/drm/: commondrmutils.h  drmbuffer.cpp  drmbuffer.h  drmdisplay.cpp  drmdisplay.h  drmdisplaymanager.cpp  drmdisplaymanager.h  drmpixelbuffer.cpp  drmpixelbuffer.h  drmplane.cpp  drmplane.h  drmscopedtypes.h  hwclock.cpp  hwclock.h
(+492 files in other folders)
